--- a/src/assets/scss/core/layout/_main.scss
+++ b/src/assets/scss/core/layout/_main.scss
@@ -19,15 +19,15 @@
 	}
 }
 
-.body-wrap {
-	position: relative;
-    overflow: hidden;
-    // Sticky footer
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
+// .body-wrap {
+// 	position: relative;
+//     overflow: hidden;
+//     // Sticky footer
+//     display: flex;
+//     flex-direction: column;
+//     min-height: 100vh;
+// }
 
-.site-content {
-    flex: 1 0 auto;
-}
+// .site-content {
+//     flex: 1 0 auto;
+// }
