--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -63,6 +63,11 @@
 @import "core/elements/modal";
 
 /*--------------------------------------------------------------
+# Flip-card
+--------------------------------------------------------------*/
+@import "core/elements/flip-card";
+
+/*--------------------------------------------------------------
 # Split pattern
 --------------------------------------------------------------*/
 @import "core/patterns/split";
